<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Themer Themer</string>
	
    <string name="title_section1">About Theme</string>
    <string name="title_section2">Screen 1</string>
    <string name="title_section3">Screen 2</string>
    <string name="title_section4">Screen 3</string>
	
    <string name="theme_name">Theme Name</string>
	
    <string name="version">Version</string>
    <string name="version_summary">1.0</string>
	
    <string name="developer">Developer</string>
    <string name="developer_summary">EatHeat</string>
	
    <string name="rate_theme">Rate Theme</string>
    <string name="rate_theme_summary">Rate it on Play Store</string>
	
    <string name="more_themes">More themes</string>
    <string name="more_themes_summary">Check out more themes by developer</string>

    <string name="howto">How To Use</string>
    <string name="howto_summary">Your theme is now installed. \n\nOpen Themer App and go to My Themes>Exported and select theme.</string>
	
</resources>
